fix dark mode input color

--- a/TOTL22/css/styles.css
+++ b/TOTL22/css/styles.css
@@ -2259,6 +2259,7 @@ body:not(#idx):not(#Profile) header .header p, body:not(#idx):not(#Profile) .hea
   background: var(--content);
   font-size: var(--lBody);
   padding: 8px 10px 9px;
+  color: var(--text);
 }
 #sort .form-item .form-flex {
   display: flex;
