--- a/TOTL22/scss/components/form.scss
+++ b/TOTL22/scss/components/form.scss
@@ -53,6 +53,7 @@
             background: var(--content);
             font-size: var(--lBody);
             padding: 8px 10px 9px;
+            color: var(--text);
         }
     }
 
